css has been added

--- a/index.html
+++ b/index.html
@@ -1,77 +1,170 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Festora</title>
-  </head>
-  <body>
-    <nav>
-      <!-- <Logo> -->
-      <img src="./Assets/logo/festo-logo.svg" alt="logo" class="logo-img" />
-      <input type="text" name="event" id="search-bar" />
-      <select name="event-type">
-        <option>Explore</option>
-        <option><a>Product Design</a></option>
-        <option><a>Web Design</a></option>
-        <option><a>Animation</a></option>
-        <option><a>Branding</a></option>
-        <option><a>Illustration</a></option>
-      </select>
 
-      <a>Add Event</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Festora | Discover College Events</title>
 
-      <form method="GET" action="/signup">
-        <button>Sign Up</button>
-      </form>
-      <form method="POST" action="/login">
-        <button>Log in</button>
-      </form>
-    </nav>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <!-- navbar -->
+    <header class="navbar">
+        <div class="logo">
+            <img src="./Assets/logo/festo-logo.svg" alt="Festora official logo">
+            <span>Festora</span>
+        </div>
+
+        <nav class="nav-links">
+            <a href="#home">Home</a>
+            <a href="#featured">Explore</a>
+            <a href="#">Add Events</a>
+        </nav>
+
+        <div class="nav-actions">
+            <button type="button" class="btn-outline">Log In</button>
+            <button type="button" class="btn-primary">Sign Up</button>
+        </div>
+    </header>
+
 
     <main>
-      <h2>Discover Amaizing College Events</h2>
-      <h4>
-        Find hackathons, competitions, workshops and networking opportunities
-        happening on your campus
-      </h4>
 
-      <!-- cards -->
-      <span class="card">
-        <img class="card-img" src="" alt="" />
-        <h4 class="event-name"></h4>
-        <p class="event-description"></p>
-      </span>
-      <span class="card">
-        <img class="card-img" src="" alt="" />
-        <h4 class="event-name"></h4>
-        <p class="event-description"></p>
-      </span>
-      <span class="card">
-        <img class="card-img" src="" alt="" />
-        <h4 class="event-name"></h4>
-        <p class="event-description"></p>
-      </span>
-      <span class="card">
-        <img class="card-img" src="" alt="" />
-        <h4 class="event-name"></h4>
-        <p class="event-description"></p>
-      </span>
-      <span class="card">
-        <img class="card-img" src="" alt="" />
-        <h4 class="event-name"></h4>
-        <p class="event-description"></p>
-      </span>
-      <span class="card">
-        <img class="card-img" src="" alt="" />
-        <h4 class="event-name"></h4>
-        <p class="event-description"></p>
-      </span>
-      <span class="card">
-        <img class="card-img" src="" alt="" />
-        <h4 class="event-name"></h4>
-        <p class="event-description"></p>
-      </span>
+        <!-- hero section -->
+        <section class="hero" id="home">
+
+            <div class="hero-content">
+
+                <h1>Discover Amazing College Events</h1>
+                <p>
+                    Find hackathons, workshops, competitions and networking
+                    opportunities happening across campuses.
+                </p>
+
+                <div class="search-container">
+
+                    <div class="search-box">
+                        <input type="text" placeholder="Search for Events, Hackathons..." aria-label="Search events">
+                        <button type="button" class="search-btn">
+                            Search
+                        </button>
+                    </div>
+
+                    <div class="filter-row" id="filters">
+                        <select>
+                            <option>All Modes</option>
+                            <option>Online</option>
+                            <option>Offline</option>
+                            <option>Hybrid</option>
+                        </select>
+
+                        <select>
+                            <option>All Categories</option>
+                            <option>Hackathons</option>
+                            <option>Workshops</option>
+                            <option>Cultural Fest</option>
+                            <option>Competitions</option>
+                        </select>
+
+                        <select>
+                            <option>All Cities</option>
+                            <option>Mumbai</option>
+                            <option>Delhi</option>
+                            <option>Guwahati</option>
+                        </select>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+
+        <!-- events -->
+        <section class="featured" id="featured">
+            <h2 class="section-title">Featured Events</h2>
+
+            <div class="events-grid">
+
+                <!-- Event Card -->
+                <article class="event-card">
+                    <img src="./Assets/events/hackathon.jpg" alt="Hackathon 2026 at Gauhati University">
+
+                    <div class="event-info">
+                        <h3>Hackathon 2026</h3>
+                        <p class="college">Gauhati University</p>
+                        <p class="meta">March 15, 2026 • 120 Seats</p>
+                        <button type="button" class="btn-primary">
+                            Register
+                        </button>
+                    </div>
+                </article>
+
+
+                <!-- Event Card -->
+                <article class="event-card">
+                    <img src="./Assets/events/workshop.jpg" alt="AI and Web Development Workshop at IIT Guwahati">
+
+                    <div class="event-info">
+                        <h3>AI & Web Dev Workshop</h3>
+                        <p class="college">IIT Guwahati</p>
+                        <p class="meta">April 3, 2026 • 80 Seats</p>
+                        <button type="button" class="btn-primary">
+                            Register
+                        </button>
+                    </div>
+                </article>
+
+
+                <!-- Event Card -->
+                <article class="event-card">
+                    <img src="./Assets/events/cultural.jpg" alt="Cultural Night 2026 at Assam Engineering College">
+
+                    <div class="event-info">
+                        <h3>Cultural Night 2026</h3>
+                        <p class="college">Assam Engineering College</p>
+                        <p class="meta">May 10, 2026 • 300 Seats</p>
+                        <button type="button" class="btn-primary">
+                            Register
+                        </button>
+                    </div>
+                </article>
+
+            </div>
+        </section>
+
     </main>
-  </body>
+
+
+    <!-- footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <h3>Festora</h3>
+            <p>Connecting students to opportunities across campuses.</p>
+
+            <div class="footer-links">
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+        </div>
+
+        <p class="copyright">
+            © 2026 Festora. Built by Abhishek & Chinmoy.
+        </p>
+    </footer>
+
+    <script src="script.js"></script>
+
+</body>
+
 </html>
