Added signup and register

--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festora | Discover College Events</title>
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -29,8 +27,8 @@
         </nav>
 
         <div class="nav-actions">
-            <button type="button" class="btn-outline">Log In</button>
-            <button type="button" class="btn-primary">Sign Up</button>
+            <a href="./html/login.html" class="btn-outline">Log In</a>
+            <a href="./html/signup.html" class="btn-primary">Sign Up</a>
         </div>
     </header>
 
@@ -103,9 +101,7 @@
                         <h3>Hackathon 2026</h3>
                         <p class="college">Gauhati University</p>
                         <p class="meta">March 15, 2026 • 120 Seats</p>
-                        <button type="button" class="btn-primary">
-                            Register
-                        </button>
+                        <a href="./html/register.html" class="btn-primary">Register</a>
                     </div>
                 </article>
 
@@ -118,9 +114,7 @@
                         <h3>AI & Web Dev Workshop</h3>
                         <p class="college">IIT Guwahati</p>
                         <p class="meta">April 3, 2026 • 80 Seats</p>
-                        <button type="button" class="btn-primary">
-                            Register
-                        </button>
+                        <a href="./html/register.html" class="btn-primary">Register</a>
                     </div>
                 </article>
 
@@ -133,9 +127,7 @@
                         <h3>Cultural Night 2026</h3>
                         <p class="college">Assam Engineering College</p>
                         <p class="meta">May 10, 2026 • 300 Seats</p>
-                        <button type="button" class="btn-primary">
-                            Register
-                        </button>
+                        <a href="./html/register.html" class="btn-primary">Register</a>
                     </div>
                 </article>
 
@@ -163,7 +155,7 @@
         </p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 
